Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -318,48 +318,48 @@
         "\t\"Yae_Miko_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/yae%20miko/yae%20miko_Mediumpruned.safetensors\",\n",
         "}\n",
         "\n",
-        "Textual_name =\"\"#@param [\"\",\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
+        "Textual_name =\"\"#@param [\"\",\"Corneo's_Makima\",\"Corneo_Power\",\"Yor_Forger\",\"Corneo's_POV_Bound_Wrists_Missionary\",\"Corneo's_Spitroast_Threesome\",\"Corneo's_Anal_sex\",\"Corneo's_Side-view_Deepthroat\",\"Corneo's_Covering_Breasts-Two_Hands\",\"Corneo's_X-shaped_Nipple_Pasties\",\"Corneo's_POV_Oral\",\"Corneo's_POV_Paizuri\",\"Corneo's_Covering_Breasts-One_Arm\",\"Corneo's_Arm_Grab_Doggystyle\",\"Corneo's_Covering_Breasts-Arms_Crossed\",\"Licking_Oral\"] {allow-input:false}\n",
         "\n",
         "Textual_dict={\n",
-        "\t\"Corneo's Makima\":\"https://civitai.com/api/download/models/6197\",\n",
+        "\t\"Corneo's_Makima\":\"https://civitai.com/api/download/models/6197\",\n",
         "\t\"Corneo_Power\":\"https://civitai.com/api/download/models/6027\" ,\n",
-        "\t\"Yor Forger\":\"https://civitai.com/api/download/models/6300\" ,\n",
-        "\t\"Corneo's POV Bound Wrists Missionary\":\"https://civitai.com/api/download/models/5405\", \n",
-        "\t\"Corneo's Spitroast Threesome\":\"https://civitai.com/api/download/models/6770\",\n",
-        "\t\"Corneo's Anal sex\":\"https://civitai.com/api/download/models/4597\" ,\n",
-        "\t\"Corneo's Side-view Deepthroat\":\"https://civitai.com/api/download/models/6242\" ,\n",
-        "\t\"Corneo's Covering Breasts -Two Hands\":\"https://civitai.com/api/download/models/6033\" ,\n",
-        "\t\"Corneo's X-shaped Nipple Pasties\":\"https://civitai.com/api/download/models/6318\" ,\n",
-        "\t\"Corneo's POV Oral\":\"https://civitai.com/api/download/models/5051\" ,\n",
-        "\t\"Corneo's POV Paizuri\":\"https://civitai.com/api/download/models/5066\", \n",
-        "\t\"Corneo's Covering Breasts -One Arm\":\"https://civitai.com/api/download/models/6034\", \n",
-        "\t\"Corneo's Arm Grab Doggystyle\":\"https://civitai.com/api/download/models/5160\" ,\n",
-        "\t\"Corneo's Covering Breasts -Arms Crossed\":\"https://civitai.com/api/download/models/5746\", \n",
-        "\t\"Licking Oral\":\"https://civitai.com/api/download/models/5746\" ,\n",
+        "\t\"Yor_Forger\":\"https://civitai.com/api/download/models/6300\" ,\n",
+        "\t\"Corneo's_POV_Bound_Wrists_Missionary\":\"https://civitai.com/api/download/models/5405\", \n",
+        "\t\"Corneo's_Spitroast_Threesome\":\"https://civitai.com/api/download/models/6770\",\n",
+        "\t\"Corneo's_Anal_sex\":\"https://civitai.com/api/download/models/4597\" ,\n",
+        "\t\"Corneo's_Side-view_Deepthroat\":\"https://civitai.com/api/download/models/6242\" ,\n",
+        "\t\"Corneo's_Covering_Breasts-Two_Hands\":\"https://civitai.com/api/download/models/6033\" ,\n",
+        "\t\"Corneo's_X-shaped_Nipple_Pasties\":\"https://civitai.com/api/download/models/6318\" ,\n",
+        "\t\"Corneo's_POV_Oral\":\"https://civitai.com/api/download/models/5051\" ,\n",
+        "\t\"Corneo's_POV_Paizuri\":\"https://civitai.com/api/download/models/5066\", \n",
+        "\t\"Corneo's_Covering_Breasts-One_Arm\":\"https://civitai.com/api/download/models/6034\", \n",
+        "\t\"Corneo's_Arm_Grab_Doggystyle\":\"https://civitai.com/api/download/models/5160\" ,\n",
+        "\t\"Corneo's_Covering_Breasts-Arms_Crossed\":\"https://civitai.com/api/download/models/5746\", \n",
+        "\t\"Licking_Oral\":\"https://civitai.com/api/download/models/5746\" ,\n",
         "}\n",
         "\n",
         "#Lycoris-LoRA\n",
         "Lycoris_name =\"\" #@param [\"\"] {allow-input:false}\n",
         "#準備中\n",
-        "Lycoris_dict={\"\":\"\"}\n",
+        "Lycoris_dict={\n",
+        "\t\t\"\":\"\",\n",
+        "}\n",
         "\n",
         "Lora_url = Lora_dict.get(Lora_name)\n",
         "Textual_url = Textual_dict.get(Textual_name)\n",
         "Lycoris_url = Lycoris_dict.get(Lycoris_name)\n",
         "\n",
-        "def install(Lora_url, Textual_url, Lycoris_url):\n",
-        "    if Lora_url:\n",
+        "def install(Lora_url, Textual_url,Lycoris_url):\n",
+        "    if Lora_url :\n",
         "        base_name = os.path.basename(Lora_url)\n",
-        "        !wget {Lora_url} -O /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora/{base_name} \n",
-        "     \n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Lora_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {Lora_name}     \n",
         "    if Textual_url :\n",
         "        base_name = os.path.basename(Textual_url)\n",
-        "        !wget {Textual_url} -O /content/stable-diffusion-webui/embeddings/{base_name} \n",
-        "\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Textual_url -d //content/stable-diffusion-webui/embeddings -o {Textual_name}.pt\n",
         "    if Lycoris_url :\n",
         "        base_name = os.path.basename(Lycoris_url)\n",
-        "        !wget {Lycoris_url} -O /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora/{base_name} \n",
-        "\t\t\t\t\t\t\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Lycoris_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {Lycoris_name}\n",
+        "\n",
         "install(Lora_url, Textual_url,Lycoris_url)"
       ],
       "metadata": {
