Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -352,13 +352,13 @@
         "def install(Lora_url, Textual_url,Lycoris_url):\n",
         "    if Lora_url :\n",
         "        base_name = os.path.basename(Lora_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Lora_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {Lora_name}     \n",
+        "        !wget {Lora_url} =O /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora/{Lora_name}.safetensors     \n",
         "    if Textual_url :\n",
         "        base_name = os.path.basename(Textual_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Textual_url -d //content/stable-diffusion-webui/embeddings -o {Textual_name}.pt\n",
+        "        !wget {Textual_url} -O /content/stable-diffusion-webui/embeddings/{Textual_name}.pt\n",
         "    if Lycoris_url :\n",
         "        base_name = os.path.basename(Lycoris_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Lycoris_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {Lycoris_name}\n",
+        "        !wget {Lycoris_url} -O /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora/{Lycoris_name}.safetensors\n",
         "\n",
         "install(Lora_url, Textual_url,Lycoris_url)"
       ],
