--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -127,7 +127,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name =\"7th_anime_v3_A\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\", \"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's 7th Heaven Mix\", \"Corneo's Shinra26 Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
+        "model_name =\"Plat_Diffusion_v1.3.1\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\",\"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's_7th_Heaven_Mix\", \"Corneo's_Shinra26_Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"stable_diffusion_v1.5\":\"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\",\n",
@@ -168,8 +168,8 @@
         "    \"meadmix\":\"https://huggingface.co/sazanka-imoto/MeadMix/resolve/main/meadmix.safetensors\",\n",
         "    \"Nabylon-v1.0\":\"https://huggingface.co/NegiInNattoMaki/Nabylon-v1.0/resolve/main/Nabylon-v1.0-fp16.safetensors\",\n",
         "    \"LonganMix\":\"https://huggingface.co/Hemlok/LonganMix/resolve/main/LonganMix-fp16.ckpt\",\n",
-        "    \"Corneo's7thHeavenMix\":\"https://civitai.com/api/download/models/5338\",\n",
-        "    \"Corneo'sShinra26Mix\":\"https://civitai.com/api/download/models/6918\",\n",
+        "    \"Corneo's 7th_Heaven_Mix\":\"https://civitai.com/api/download/models/5338\",\n",
+        "    \"Corneo's_Shinra26_Mix\":\"https://civitai.com/api/download/models/6918\",\n",
         "    \"atwmix_test2\":\"https://huggingface.co/atsuwo/atwmix_test2/resolve/main/atwmix_test2.ckpt\",\n",
         "    \"Graham_Special\":\"https://huggingface.co/Graham-san/Graham_Special/resolve/main/Graham%20Special%20v1.ckpt\",\n",
         "    \"BalorV2featAbyssOrange2\":\"https://huggingface.co/ploughB660/Balor-V2/resolve/main/BalorV2featAbyssOrange2.safetensors\",\n",
@@ -185,16 +185,16 @@
         "    base_name = os.path.basename(model_url)\n",
         "\n",
         "    if model_url.startswith(\"https://drive.google.com\"):\n",
-        "        os.chdir(/content/stable-diffusion-webui/models/Stable-diffusion)\n",
+        "        os.chdir(\"/content/stable-diffusion-webui/models/Stable-diffusion\")\n",
         "        !gdown --fuzzy {model_url}\n",
         "    elif model_url.startswith(\"https://huggingface.co/\"):\n",
         "        if \"/blob/\" in model_url:\n",
         "            model_url = model_url.replace(\"/blob/\", \"/resolve/\")\n",
-        "        huggingface_token = \"\" \n",
+        "        huggingface_token =\"YOUR_HUGGINGFACE_TOKEN\" # 自分のトークンに変更\n",
         "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
-        "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name} {model_url}\n",
+        "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {model_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name} \n",
         "    else:\n",
-        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/models/Stable-diffusion {model_url}\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {model_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {model_name}.safetensors\n",
         "\n",
         "install(model_url)"
       ]
@@ -342,30 +342,32 @@
         "\t\"Yae_Miko_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/yae%20miko/yae%20miko_Mediumpruned.safetensors\",\n",
         "}\n",
         "\n",
-        "Textual_name =\"\"#@param [\"\",\"Corneo's Makima\",\"Corneo_Power\",\"Yor Forger\",\"Corneo's POV Bound Wrists Missionary\",\"Corneo's Spitroast Threesome\",\"Corneo's Anal sex\",\"Corneo's Side-view Deepthroat\",\"Corneo's Covering Breasts -Two Hands\",\"Corneo's X-shaped Nipple Pasties\",\"Corneo's POV Oral\",\"Corneo's POV Paizuri\",\"Corneo's Covering Breasts -One Arm\",\"Corneo's Arm Grab Doggystyle\",\"Corneo's Covering Breasts -Arms Crossed\",\"Licking Oral\"] {allow-input:false}\n",
+        "Textual_name =\"\"#@param [\"\",\"Corneo's_Makima\",\"Corneo_Power\",\"Yor_Forger\",\"Corneo's_POV_Bound_Wrists_Missionary\",\"Corneo's_Spitroast_Threesome\",\"Corneo's_Anal_sex\",\"Corneo's_Side-view_Deepthroat\",\"Corneo's_Covering_Breasts-Two_Hands\",\"Corneo's_X-shaped_Nipple_Pasties\",\"Corneo's_POV_Oral\",\"Corneo's_POV_Paizuri\",\"Corneo's_Covering_Breasts-One_Arm\",\"Corneo's_Arm_Grab_Doggystyle\",\"Corneo's_Covering_Breasts-Arms_Crossed\",\"Licking_Oral\"] {allow-input:false}\n",
         "\n",
         "Textual_dict={\n",
-        "\t\"Corneo's Makima\":\"https://civitai.com/api/download/models/6197\",\n",
+        "\t\"Corneo's_Makima\":\"https://civitai.com/api/download/models/6197\",\n",
         "\t\"Corneo_Power\":\"https://civitai.com/api/download/models/6027\" ,\n",
-        "\t\"Yor Forger\":\"https://civitai.com/api/download/models/6300\" ,\n",
-        "\t\"Corneo's POV Bound Wrists Missionary\":\"https://civitai.com/api/download/models/5405\", \n",
-        "\t\"Corneo's Spitroast Threesome\":\"https://civitai.com/api/download/models/6770\",\n",
-        "\t\"Corneo's Anal sex\":\"https://civitai.com/api/download/models/4597\" ,\n",
-        "\t\"Corneo's Side-view Deepthroat\":\"https://civitai.com/api/download/models/6242\" ,\n",
-        "\t\"Corneo's Covering Breasts -Two Hands\":\"https://civitai.com/api/download/models/6033\" ,\n",
-        "\t\"Corneo's X-shaped Nipple Pasties\":\"https://civitai.com/api/download/models/6318\" ,\n",
-        "\t\"Corneo's POV Oral\":\"https://civitai.com/api/download/models/5051\" ,\n",
-        "\t\"Corneo's POV Paizuri\":\"https://civitai.com/api/download/models/5066\", \n",
-        "\t\"Corneo's Covering Breasts -One Arm\":\"https://civitai.com/api/download/models/6034\", \n",
-        "\t\"Corneo's Arm Grab Doggystyle\":\"https://civitai.com/api/download/models/5160\" ,\n",
-        "\t\"Corneo's Covering Breasts -Arms Crossed\":\"https://civitai.com/api/download/models/5746\", \n",
-        "\t\"Licking Oral\":\"https://civitai.com/api/download/models/5746\" ,\n",
+        "\t\"Yor_Forger\":\"https://civitai.com/api/download/models/6300\" ,\n",
+        "\t\"Corneo's_POV_Bound_Wrists_Missionary\":\"https://civitai.com/api/download/models/5405\", \n",
+        "\t\"Corneo's_Spitroast_Threesome\":\"https://civitai.com/api/download/models/6770\",\n",
+        "\t\"Corneo's_Anal_sex\":\"https://civitai.com/api/download/models/4597\" ,\n",
+        "\t\"Corneo's_Side-view_Deepthroat\":\"https://civitai.com/api/download/models/6242\" ,\n",
+        "\t\"Corneo's_Covering_Breasts-Two_Hands\":\"https://civitai.com/api/download/models/6033\" ,\n",
+        "\t\"Corneo's_X-shaped_Nipple_Pasties\":\"https://civitai.com/api/download/models/6318\" ,\n",
+        "\t\"Corneo's_POV_Oral\":\"https://civitai.com/api/download/models/5051\" ,\n",
+        "\t\"Corneo's_POV_Paizuri\":\"https://civitai.com/api/download/models/5066\", \n",
+        "\t\"Corneo's_Covering_Breasts-One_Arm\":\"https://civitai.com/api/download/models/6034\", \n",
+        "\t\"Corneo's_Arm_Grab_Doggystyle\":\"https://civitai.com/api/download/models/5160\" ,\n",
+        "\t\"Corneo's_Covering_Breasts-Arms_Crossed\":\"https://civitai.com/api/download/models/5746\", \n",
+        "\t\"Licking_Oral\":\"https://civitai.com/api/download/models/5746\" ,\n",
         "}\n",
         "\n",
         "#Lycoris-LoRA\n",
         "Lycoris_name =\"\" #@param [\"\"] {allow-input:false}\n",
         "#準備中\n",
-        "Lycoris_dict={\"\",\"\"}\n",
+        "Lycoris_dict={\n",
+        "\t\t\"\":\"\",\n",
+        "}\n",
         "\n",
         "Lora_url = Lora_dict.get(Lora_name)\n",
         "Textual_url = Textual_dict.get(Textual_name)\n",
@@ -374,13 +376,13 @@
         "def install(Lora_url, Textual_url,Lycoris_url):\n",
         "    if Lora_url :\n",
         "        base_name = os.path.basename(Lora_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Lora_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $base_name     \n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Lora_url} -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {Lora_name}.safetensors     \n",
         "    if Textual_url :\n",
         "        base_name = os.path.basename(Textual_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Textual_url -d //content/stable-diffusion-webui/embeddings -o $base_name\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Textual_url} -d /content/stable-diffusion-webui/embeddings -o {Textual_name}.pt\n",
         "    if Lycoris_url :\n",
         "        base_name = os.path.basename(Lycoris_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Lycoris_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $base_name\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Lycoris_url} -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {Lycoris_name}.safetensors\n",
         "\n",
         "install(Lora_url, Textual_url,Lycoris_url)"
       ],
