Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -320,21 +320,23 @@
         "\n",
         "Textual_name =\"\"#@param [\"\",\"Corneo's_Makima\",\"Corneo_Power\",\"Yor_Forger\",\"Corneo's_POV_Bound_Wrists_Missionary\",\"Corneo's_Spitroast_Threesome\",\"Corneo's_Anal_sex\",\"Corneo's_Side-view_Deepthroat\",\"Corneo's_Covering_Breasts-Two_Hands\",\"Corneo's_X-shaped_Nipple_Pasties\",\"Corneo's_POV_Oral\",\"Corneo's_POV_Paizuri\",\"Corneo's_Covering_Breasts-One_Arm\",\"Corneo's_Arm_Grab_Doggystyle\",\"Corneo's_Covering_Breasts-Arms_Crossed\",\"Licking_Oral\"] {allow-input:false}\n",
         "\n",
+        "Textual_name =\"Yor_Forger\"#@param [\"\",\"Corneos_Makima\",\"Corneo_Power\",\"Yor_Forger\",\"Corneos_POV_Bound_Wrists_Missionary\",\"Corneos_Spitroast_Threesome\",\"Corneos_Anal_sex\",\"Corneos_Side-view_Deepthroat\",\"Corneos_Covering_Breasts-Two_Hands\",\"Corneos_X-shaped_Nipple_Pasties\",\"Corneos_POV_Oral\",\"Corneos_POV_Paizuri\",\"Corneos_Covering_Breasts-One_Arm\",\"Corneos_Arm_Grab_Doggystyle\",\"Corneos_Covering_Breasts-Arms_Crossed\",\"Licking_Oral\"] {allow-input:false}\n",
+        "\n",
         "Textual_dict={\n",
-        "\t\"Corneo's_Makima\":\"https://civitai.com/api/download/models/6197\",\n",
+        "\t\"Corneos_Makima\":\"https://civitai.com/api/download/models/6197\",\n",
         "\t\"Corneo_Power\":\"https://civitai.com/api/download/models/6027\" ,\n",
         "\t\"Yor_Forger\":\"https://civitai.com/api/download/models/6300\" ,\n",
-        "\t\"Corneo's_POV_Bound_Wrists_Missionary\":\"https://civitai.com/api/download/models/5405\", \n",
-        "\t\"Corneo's_Spitroast_Threesome\":\"https://civitai.com/api/download/models/6770\",\n",
-        "\t\"Corneo's_Anal_sex\":\"https://civitai.com/api/download/models/4597\" ,\n",
-        "\t\"Corneo's_Side-view_Deepthroat\":\"https://civitai.com/api/download/models/6242\" ,\n",
-        "\t\"Corneo's_Covering_Breasts-Two_Hands\":\"https://civitai.com/api/download/models/6033\" ,\n",
-        "\t\"Corneo's_X-shaped_Nipple_Pasties\":\"https://civitai.com/api/download/models/6318\" ,\n",
-        "\t\"Corneo's_POV_Oral\":\"https://civitai.com/api/download/models/5051\" ,\n",
-        "\t\"Corneo's_POV_Paizuri\":\"https://civitai.com/api/download/models/5066\", \n",
-        "\t\"Corneo's_Covering_Breasts-One_Arm\":\"https://civitai.com/api/download/models/6034\", \n",
-        "\t\"Corneo's_Arm_Grab_Doggystyle\":\"https://civitai.com/api/download/models/5160\" ,\n",
-        "\t\"Corneo's_Covering_Breasts-Arms_Crossed\":\"https://civitai.com/api/download/models/5746\", \n",
+        "\t\"Corneos_POV_Bound_Wrists_Missionary\":\"https://civitai.com/api/download/models/5405\", \n",
+        "\t\"Corneos_Spitroast_Threesome\":\"https://civitai.com/api/download/models/6770\",\n",
+        "\t\"Corneos_Anal_sex\":\"https://civitai.com/api/download/models/4597\" ,\n",
+        "\t\"Corneos_Side-view_Deepthroat\":\"https://civitai.com/api/download/models/6242\" ,\n",
+        "\t\"Corneos_Covering_Breasts-Two_Hands\":\"https://civitai.com/api/download/models/6033\" ,\n",
+        "\t\"Corneos_X-shaped_Nipple_Pasties\":\"https://civitai.com/api/download/models/6318\" ,\n",
+        "\t\"Corneos_POV_Oral\":\"https://civitai.com/api/download/models/5051\" ,\n",
+        "\t\"Corneos_POV_Paizuri\":\"https://civitai.com/api/download/models/5066\", \n",
+        "\t\"Corneos_Covering_Breasts-One_Arm\":\"https://civitai.com/api/download/models/6034\", \n",
+        "\t\"Corneos_Arm_Grab_Doggystyle\":\"https://civitai.com/api/download/models/5160\" ,\n",
+        "\t\"Corneos_Covering_Breasts-Arms_Crossed\":\"https://civitai.com/api/download/models/5746\", \n",
         "\t\"Licking_Oral\":\"https://civitai.com/api/download/models/5746\" ,\n",
         "}\n",
         "\n",
