Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -318,9 +318,8 @@
         "\t\"Yae_Miko_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/yae%20miko/yae%20miko_Mediumpruned.safetensors\",\n",
         "}\n",
         "\n",
-        "Textual_name =\"\"#@param [\"\",\"Corneo's_Makima\",\"Corneo_Power\",\"Yor_Forger\",\"Corneo's_POV_Bound_Wrists_Missionary\",\"Corneo's_Spitroast_Threesome\",\"Corneo's_Anal_sex\",\"Corneo's_Side-view_Deepthroat\",\"Corneo's_Covering_Breasts-Two_Hands\",\"Corneo's_X-shaped_Nipple_Pasties\",\"Corneo's_POV_Oral\",\"Corneo's_POV_Paizuri\",\"Corneo's_Covering_Breasts-One_Arm\",\"Corneo's_Arm_Grab_Doggystyle\",\"Corneo's_Covering_Breasts-Arms_Crossed\",\"Licking_Oral\"] {allow-input:false}\n",
         "\n",
-        "Textual_name =\"Yor_Forger\"#@param [\"\",\"Corneos_Makima\",\"Corneo_Power\",\"Yor_Forger\",\"Corneos_POV_Bound_Wrists_Missionary\",\"Corneos_Spitroast_Threesome\",\"Corneos_Anal_sex\",\"Corneos_Side-view_Deepthroat\",\"Corneos_Covering_Breasts-Two_Hands\",\"Corneos_X-shaped_Nipple_Pasties\",\"Corneos_POV_Oral\",\"Corneos_POV_Paizuri\",\"Corneos_Covering_Breasts-One_Arm\",\"Corneos_Arm_Grab_Doggystyle\",\"Corneos_Covering_Breasts-Arms_Crossed\",\"Licking_Oral\"] {allow-input:false}\n",
+        "Textual_name =\"\"#@param [\"\",\"Corneos_Makima\",\"Corneo_Power\",\"Yor_Forger\",\"Corneos_POV_Bound_Wrists_Missionary\",\"Corneos_Spitroast_Threesome\",\"Corneos_Anal_sex\",\"Corneos_Side-view_Deepthroat\",\"Corneos_Covering_Breasts-Two_Hands\",\"Corneos_X-shaped_Nipple_Pasties\",\"Corneos_POV_Oral\",\"Corneos_POV_Paizuri\",\"Corneos_Covering_Breasts-One_Arm\",\"Corneos_Arm_Grab_Doggystyle\",\"Corneos_Covering_Breasts-Arms_Crossed\",\"Licking_Oral\"] {allow-input:false}\n",
         "\n",
         "Textual_dict={\n",
         "\t\"Corneos_Makima\":\"https://civitai.com/api/download/models/6197\",\n",
