Colaboratory を使用して作成しました

--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -63,7 +63,7 @@
         "\n",
         "import os\n",
         "                                \n",
-        "model_name =\"ChilloutMix\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"Counterfeit-V2.0\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"anything-v4.5\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"Counterfeit-V2.5\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\",\"7th_anime_v2_C\",\"7th_anime_v3_A\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"Corneo's_7th_Heaven_Mix\",\"ChilloutMix\",\"wd-1-5-beta2\"] {allow-input: false}\n",
+        "model_name =\"ChilloutMix\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"Counterfeit-V2.0\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"anything-v4.5\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"Counterfeit-V2.5\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\",\"7th_anime_v2_C\",\"7th_anime_v3_A\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"Corneo_7th_Heaven_Mix\",\"ChilloutMix\",\"wd-1-5-beta2\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"stable_diffusion_v1.5\":\"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\",\n",
@@ -104,8 +104,8 @@
         "    \"meadmix\":\"https://huggingface.co/sazanka-imoto/MeadMix/resolve/main/meadmix.safetensors\",\n",
         "    \"Nabylon-v1.0\":\"https://huggingface.co/NegiInNattoMaki/Nabylon-v1.0/resolve/main/Nabylon-v1.0-fp16.safetensors\",\n",
         "    \"LonganMix\":\"https://huggingface.co/Hemlok/LonganMix/resolve/main/LonganMix-fp16.ckpt\",\n",
-        "    \"Corneo's_7th_Heaven_Mix\":\"https://civitai.com/api/download/models/5338\",\n",
-        "    \"Corneo's_Shinra26_Mix\":\"https://civitai.com/api/download/models/6918\",\n",
+        "    \"Corneo_7th_Heaven_Mix\":\"https://civitai.com/api/download/models/5338\",\n",
+        "    \"Corneo_Shinra26_Mix\":\"https://civitai.com/api/download/models/6918\",\n",
         "    \"atwmix_test2\":\"https://huggingface.co/atsuwo/atwmix_test2/resolve/main/atwmix_test2.ckpt\",\n",
         "    \"Graham_Special\":\"https://huggingface.co/Graham-san/Graham_Special/resolve/main/Graham%20Special%20v1.ckpt\",\n",
         "    \"BalorV2featAbyssOrange2\":\"https://huggingface.co/ploughB660/Balor-V2/resolve/main/BalorV2featAbyssOrange2.safetensors\",\n",
