Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -127,7 +127,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name =\"Plat_Diffusion_v1.3.1\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\",\"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's_7th_Heaven_Mix\", \"Corneo's_Shinra26_Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
+        "model_name =\"Plat_Diffusion_v1.3.1\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\",\"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo_7th_Heaven_Mix\", \"Corneo_Shinra26_Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"stable_diffusion_v1.5\":\"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\",\n",
@@ -168,8 +168,8 @@
         "    \"meadmix\":\"https://huggingface.co/sazanka-imoto/MeadMix/resolve/main/meadmix.safetensors\",\n",
         "    \"Nabylon-v1.0\":\"https://huggingface.co/NegiInNattoMaki/Nabylon-v1.0/resolve/main/Nabylon-v1.0-fp16.safetensors\",\n",
         "    \"LonganMix\":\"https://huggingface.co/Hemlok/LonganMix/resolve/main/LonganMix-fp16.ckpt\",\n",
-        "    \"Corneo's 7th_Heaven_Mix\":\"https://civitai.com/api/download/models/5338\",\n",
-        "    \"Corneo's_Shinra26_Mix\":\"https://civitai.com/api/download/models/6918\",\n",
+        "    \"Corneo_7th_Heaven_Mix\":\"https://civitai.com/api/download/models/5338\",\n",
+        "    \"Corneo_Shinra26_Mix\":\"https://civitai.com/api/download/models/6918\",\n",
         "    \"atwmix_test2\":\"https://huggingface.co/atsuwo/atwmix_test2/resolve/main/atwmix_test2.ckpt\",\n",
         "    \"Graham_Special\":\"https://huggingface.co/Graham-san/Graham_Special/resolve/main/Graham%20Special%20v1.ckpt\",\n",
         "    \"BalorV2featAbyssOrange2\":\"https://huggingface.co/ploughB660/Balor-V2/resolve/main/BalorV2featAbyssOrange2.safetensors\",\n",
@@ -342,23 +342,23 @@
         "\t\"Yae_Miko_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/yae%20miko/yae%20miko_Mediumpruned.safetensors\",\n",
         "}\n",
         "\n",
-        "Textual_name =\"\"#@param [\"\",\"Corneo's_Makima\",\"Corneo_Power\",\"Yor_Forger\",\"Corneo's_POV_Bound_Wrists_Missionary\",\"Corneo's_Spitroast_Threesome\",\"Corneo's_Anal_sex\",\"Corneo's_Side-view_Deepthroat\",\"Corneo's_Covering_Breasts-Two_Hands\",\"Corneo's_X-shaped_Nipple_Pasties\",\"Corneo's_POV_Oral\",\"Corneo's_POV_Paizuri\",\"Corneo's_Covering_Breasts-One_Arm\",\"Corneo's_Arm_Grab_Doggystyle\",\"Corneo's_Covering_Breasts-Arms_Crossed\",\"Licking_Oral\"] {allow-input:false}\n",
+        "Textual_name =\"\"#@param [\"\",\"Corneos_Makima\",\"Corneo_Power\",\"Yor_Forger\",\"Corneos_POV_Bound_Wrists_Missionary\",\"Corneos_Spitroast_Threesome\",\"Corneos_Anal_sex\",\"Corneos_Side-view_Deepthroat\",\"Corneos_Covering_Breasts-Two_Hands\",\"Corneos_X-shaped_Nipple_Pasties\",\"Corneos_POV_Oral\",\"Corneos_POV_Paizuri\",\"Corneos_Covering_Breasts-One_Arm\",\"Corneos_Arm_Grab_Doggystyle\",\"Corneos_Covering_Breasts-Arms_Crossed\",\"Licking_Oral\"] {allow-input:false}\n",
         "\n",
         "Textual_dict={\n",
-        "\t\"Corneo's_Makima\":\"https://civitai.com/api/download/models/6197\",\n",
+        "\t\"Corneos_Makima\":\"https://civitai.com/api/download/models/6197\",\n",
         "\t\"Corneo_Power\":\"https://civitai.com/api/download/models/6027\" ,\n",
         "\t\"Yor_Forger\":\"https://civitai.com/api/download/models/6300\" ,\n",
-        "\t\"Corneo's_POV_Bound_Wrists_Missionary\":\"https://civitai.com/api/download/models/5405\", \n",
-        "\t\"Corneo's_Spitroast_Threesome\":\"https://civitai.com/api/download/models/6770\",\n",
-        "\t\"Corneo's_Anal_sex\":\"https://civitai.com/api/download/models/4597\" ,\n",
-        "\t\"Corneo's_Side-view_Deepthroat\":\"https://civitai.com/api/download/models/6242\" ,\n",
-        "\t\"Corneo's_Covering_Breasts-Two_Hands\":\"https://civitai.com/api/download/models/6033\" ,\n",
-        "\t\"Corneo's_X-shaped_Nipple_Pasties\":\"https://civitai.com/api/download/models/6318\" ,\n",
-        "\t\"Corneo's_POV_Oral\":\"https://civitai.com/api/download/models/5051\" ,\n",
-        "\t\"Corneo's_POV_Paizuri\":\"https://civitai.com/api/download/models/5066\", \n",
-        "\t\"Corneo's_Covering_Breasts-One_Arm\":\"https://civitai.com/api/download/models/6034\", \n",
-        "\t\"Corneo's_Arm_Grab_Doggystyle\":\"https://civitai.com/api/download/models/5160\" ,\n",
-        "\t\"Corneo's_Covering_Breasts-Arms_Crossed\":\"https://civitai.com/api/download/models/5746\", \n",
+        "\t\"Corneos_POV_Bound_Wrists_Missionary\":\"https://civitai.com/api/download/models/5405\", \n",
+        "\t\"Corneos_Spitroast_Threesome\":\"https://civitai.com/api/download/models/6770\",\n",
+        "\t\"Corneos_Anal_sex\":\"https://civitai.com/api/download/models/4597\" ,\n",
+        "\t\"Corneos_Side-view_Deepthroat\":\"https://civitai.com/api/download/models/6242\" ,\n",
+        "\t\"Corneos_Covering_Breasts-Two_Hands\":\"https://civitai.com/api/download/models/6033\" ,\n",
+        "\t\"Corneos_X-shaped_Nipple_Pasties\":\"https://civitai.com/api/download/models/6318\" ,\n",
+        "\t\"Corneos_POV_Oral\":\"https://civitai.com/api/download/models/5051\" ,\n",
+        "\t\"Corneos_POV_Paizuri\":\"https://civitai.com/api/download/models/5066\", \n",
+        "\t\"Corneos_Covering_Breasts-One_Arm\":\"https://civitai.com/api/download/models/6034\", \n",
+        "\t\"Corneos_Arm_Grab_Doggystyle\":\"https://civitai.com/api/download/models/5160\" ,\n",
+        "\t\"Corneos_Covering_Breasts-Arms_Crossed\":\"https://civitai.com/api/download/models/5746\", \n",
         "\t\"Licking_Oral\":\"https://civitai.com/api/download/models/5746\" ,\n",
         "}\n",
         "\n",
