--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -71,6 +71,7 @@
         "mount_drive = False # @param {type: \"boolean\"}\n",
         "\n",
         "if mount_drive:\n",
+        "    import os\n",
         "    from google.colab import drive\n",
         "    if not os.path.exists(\"/content/drive\"):\n",
         "        drive.mount(\"/content/drive\")"
@@ -261,9 +262,9 @@
         "  if \"例:\" in drivePath:\n",
         "    print(\"\")\n",
         "  else:\n",
+        "    import os\n",
         "    from google.colab import drive\n",
-        "    if not os.path.exists(\"/content/drive\"):\n",
-        "      drive.mount(\"/content/drive\")\n",
+        "    drive.mount(\"/content/drive\")\n",
         "    # check if file exists in drivePath\n",
         "    if not os.path.exists(drivePath):\n",
         "      # check if file exists with \"/\" prefix\n",
