Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -20,7 +20,9 @@
       "outputs": [],
       "source": [
         "#@title 1.WebUIのインストール\n",
+        "\n",
         "#パッケージインストール\n",
+        "\n",
         "!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.17/xformers-0.0.17+b6be33a.d20230315-cp39-cp39-linux_x86_64.whl\n",
         "!pip install -q --pre triton\n",
         "#WebUIのインストール\n",
@@ -169,6 +171,7 @@
       "source": [
         "#@title 3.VAE\n",
         "#@markdown VAEを選択してから実行してください。\n",
+        "import os\n",
         "\n",
         "vae_name = \"orangemix\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix\"] {allow-input: false}\n",
         "\n",
