--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -35,8 +35,8 @@
         "#GPUの確認\n",
         "!nvidia-smi\n",
         "#パッケージインストール\n",
-        "!pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.17/xformers-0.0.17+b6be33a.d20230315-cp39-cp39-linux_x86_64.whl\n",
-        "!pip install -q --pre triton\n",
+        "!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 torchaudio==0.13.1 torchtext==0.14.1 torchdata==0.5.1 --extra-index-url https://download.pytorch.org/whl/cu117 -U\n",
+        "!pip install -q xformers==0.0.16 triton==2.0.0 -U\n",
         "#WebUIのインストール\n",
         "!git clone -b v2.0 https://github.com/camenduru/stable-diffusion-webui\n",
         "#Extensions1 絶対入れておくべき\n",
