Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -11,6 +11,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "現在起動できないので<br>\n",
+        "▼こちらをお使いください<br>\n",
+        "[Nios_v2_update.ipynb](https://colab.research.google.com/github/AI-Nios/Nios-stable-diffusion-webui-colab-japan/blob/main/Nios_v2_update.ipynb)"
+      ],
+      "metadata": {
+        "id": "EvGY6d3ceF43"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -112,6 +123,13 @@
         "    if not os.path.exists(\"/content/drive\"):\n",
         "        drive.mount(\"/content/drive\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "G87RdudfeFaV"
+      }
     },
     {
       "cell_type": "code",
