--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -11,17 +11,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "現在起動できないので<br>\n",
-        "▼こちらをお使いください<br>\n",
-        "[Nios_v2_update.ipynb](https://colab.research.google.com/github/AI-Nios/Nios-stable-diffusion-webui-colab-japan/blob/main/Nios_v2_update.ipynb)"
-      ],
-      "metadata": {
-        "id": "EvGY6d3ceF43"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -48,19 +37,23 @@
         "!rm *.deb\n",
         "\n",
         "!apt -y install -qq aria2\n",
-        "!pip install torch==1.13.1+cu116 torchvision==0.14.1+cu116 torchaudio==0.13.1 torchtext==0.14.1 torchdata==0.5.1 --extra-index-url https://download.pytorch.org/whl/cu116 -U\n",
-        "!pip install -q xformers==0.0.16 triton==2.0.0 -U\n",
+        "!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
+        "!pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
         "\n",
         "#WebUIのインストール\n",
-        "!git clone -b v2.1 https://github.com/camenduru/stable-diffusion-webui\n",
+        "!git clone -b v2.2 https://github.com/camenduru/stable-diffusion-webui\n",
+        "\n",
         "#Extensions1 絶対入れておくべき\n",
         "!git clone https://github.com/alemelis/sd-webui-ar.git /content/stable-diffusion-webui/extensions/sd-webui-ar\n",
         "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser /content/stable-diffusion-webui/extensions/stable-diffusion-webui-images-browser\n",
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
         "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/stable-diffusion-webui/extensions/stable-diffusion-webui-huggingface\n",
         "\n",
-        "#Extensions1.5 起動に必要？\n",
+        "#Extensions1.5 \n",
+        "\n",
+        "\n",
         "!git clone https://github.com/camenduru/sd-webui-tunnels /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
+        "!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py -O /content/stable-diffusion-webui/scripts/run_n_times.py\n",
         "\n",
         "#Extensions2　任意\n",
         "Extensions = True #@param {'type':'boolean'}\n",
@@ -78,6 +71,7 @@
         "  !git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git /content/stable-diffusion-webui/extensions/Stable-Diffusion-Webui-Civitai-Helper\n",
         "  !git clone https://github.com/hnmr293/sd-webui-cutoff /content/stable-diffusion-webui/extensions/sd-webui-cutoff\n",
         "  !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
+        "  !git clone https://github.com/etherealxx/batchlinks-webui /content/stable-diffusion-webui/extensions/batchlinks-webui\n",
         "%cd /content/stable-diffusion-webui\n",
         "!git reset --hard\n",
         "\n",
@@ -413,11 +407,6 @@
       "cell_type": "code",
       "source": [
         "#@title  4.WebUIの起動\n",
-        "!sed -i -e '''/    prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
-        "!sed -i -e 's/fastapi==0.90.1/fastapi==0.89.1/g' /content/stable-diffusion-webui/requirements_versions.txt\n",
-        "\n",
-        "!mkdir /content/stable-diffusion-webui/extensions/deforum-for-automatic1111-webui/models\n",
-        "\n",
         "!python launch.py --listen --xformers --enable-insecure-extension-access --theme dark --gradio-queue --multiple"
       ],
       "metadata": {
